# flrc

./: .gitignore  .travis.yml  LICENSE  LICENSE_INFO.txt  Makefile.in  README.md  bootstrap.sh  configure.ac  hrc-makefile.inc
compiler/: driver.sml  haskell.sml  hrc.mlb  hrc.sml
compiler/anorm-lazy/: abs-core.sml  abs-eval.sml  anorm-lazy-analyze.sml  anorm-lazy.mlb  anorm-lazy.sml  domain.sml  stats.sml  strictness.sml  to-abs-core.sml
compiler/anorm-strict/: anorm-strict-analyze.sml  anorm-strict-clone.sml  anorm-strict-closure-convert.sml  anorm-strict-free-vars.sml  anorm-strict-layout.sml  anorm-strict-optimize.sml  anorm-strict-rewrite.sml  anorm-strict-utils.sml  anorm-strict.mlb  anorm-strict.sml  stats.sml
compiler/as-to-mil/: as-to-mil.mlb  ghc-prim.sml  to-mil.sml  utils.sml
compiler/back-end/: back-end.mlb  back-end.sml  mil-to-pil.sml  outputter.sml  pil.sml  runtime.sml
compiler/ch-to-as/: ch-to-as.mlb  to-lazy.sml  to-strict.sml
compiler/common/: chat.sml  common.mlb  compare.sml  config.sml  dataflow.sml  dominance.sml  effect.sml  fail.sml  globals.sml  graph.sml  identifier.sml  int-arb.sml  intr.sml  locus.sml  lub.sml  pass.sml  path.sml  rat.sml  rename.sml  topo-sort.sml  try.sml  tuple.sml  type-rep.sml  utils.sml  vector-instruction.sml  z-coding.sml
compiler/core-hs/: core-hs.grm  core-hs.lex  core-hs.mlb  core-hs.sml  ghc-prim-op.sml  ghc-prim-type.sml  layout.sml  link-option.sml  normalize.sml  parse.sml
compiler/mil/: analyse.sml  bound-vars.sml  call-graph.sml  cfg.sml  check.sml  code-copy.sml  compile.mlb  compile.sml  dataflow-analysis.sml  dependence-analysis.sml  extended-layout.sml  fmil.sml  free-vars.sml  layout.sml  loop.sml  mil.mlb  mil.sml  parse.sml  (+16 more)
doc/: building-ghc.md
patches/: ghc-7.6-hrc.patch  ghc-Cabal-7.6-hrc.patch  ghc-base-7.6-hrc.patch  ghc-integer-simple-7.6-hrc.patch  ghc-primitive-7.6-hrc.patch  ghc-repa-3.2.2.2-hrc.patch  ghc-vector-7.6-hrc.patch
runtime/: plsr-natives.h
sml-lib/: Makefile
(+98 files in other folders)
